--- a/app/views/list-select.html
+++ b/app/views/list-select.html
@@ -1,7 +1,7 @@
 <div class="select">
 	<header class="small-12 columns">
-		<h2>{{ page.title }}</h2>
-		<p>{{ page.desc }}</p>
+		<h3>{{ page.title }}</h3>
+		<p ng-show="page.desc">{{ page.desc }}</p>
 	</header>
 	<div class="choices">
 		<label
