--- a/app/styles/_generic.scss
+++ b/app/styles/_generic.scss
@@ -1,8 +1,6 @@
 // GENERAL GENERIC STYLES //
 
-#livechat-compact-container{
-  display: none;
-}
+#livechat-compact-container{ display: none; }
 
 body, 
 html, 
@@ -58,5 +56,21 @@ section.middle-align{
   > div {
     display: table-cell;
     vertical-align: middle;
+  }
+}
+
+.reveal-modal{
+  transform: scale(0.8);
+  opacity: 0;
+  transition: all .5s $easeOutExpo;
+  &.in{
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@media #{$small-only}{
+  .reveal-modal-bg{
+    display: none!important;
   }
 }
