--- a/app/views/join-confirm-insurer.html
+++ b/app/views/join-confirm-insurer.html
@@ -1,19 +1,11 @@
 <div class="row">
 	<div class="small-12 columns">
 		<div ng-show="!isAlternateText">
-			<h2>Is the address on this license your current address?</h2>
+			<h2>Is everyone on policy?</h2>
 			<p>
-				<button class="button" ng-click="closeModal()">Yes</button>
-				<button class="button" ng-click="showAlternateText()">No</button>
+				<button type="button" class="button" ng-click="closeModal(true)">Yes</button>
+				<button type="button" class="button" ng-click="closeModal(false)">No</button>
 			</p>
 		</div>
-
-		<div ng-show="isAlternateText">
-			<h1>Please enter your current address</h1>
-			<p><input type="text" name="correctAddress" ng-model="l.correctAddress" value="" /></p>
-			<p>
-				<button class="button" ng-click="closeModal(l)">Confirm</button>	
-			</p>	
-		</div>	
 	</div>
 </div>
