--- a/app/views/join-confirm-license.html
+++ b/app/views/join-confirm-license.html
@@ -3,8 +3,8 @@
 		<div ng-show="!isAlternateText">
 			<h2>Is the address on this license your current address?</h2>
 			<p>
-				<button class="button" ng-click="closeModal()">Yes</button>
-				<button class="button" ng-click="showAlternateText()">No</button>
+				<button type="button" class="button" ng-click="closeModal()">Yes</button>
+				<button type="button" class="button" ng-click="showAlternateText()">No</button>
 			</p>
 		</div>
 
@@ -12,7 +12,7 @@
 			<h1>Please enter your current address</h1>
 			<p><input type="text" name="correctAddress" ng-model="l.correctAddress" value="" /></p>
 			<p>
-				<button class="button" ng-click="closeModal(l)">Confirm</button>	
+				<button type="button" class="button" ng-click="closeModal(l)">Confirm</button>	
 			</p>	
 		</div>	
 	</div>
