--- a/app/views/join-confirm.html
+++ b/app/views/join-confirm.html
@@ -1,21 +1,65 @@
 <div class="row">
 	<div class="small-12 columns">
-		<div ng-show="!isAlternateText">
-			<h2>Is the address on this license your current address?</h2>
+		<h2>You're gonna love your Basic65 health cover</h2>
+		<p>Let's get some information off you first.</p>
+		<div>
+			<p>User details</p>
 			<p>
-				<button class="button" ng-click="closeModal()">Yes</button>
-				<button class="button" ng-click="showAlternateText()">No</button>
+				<label for="name">Name: </label>
+				<span>{{signupdata.u.name}}</span>
+			</p>
+			<p>
+				<label for="email">Email: </label>
+				<span>{{signupdata.u.email}}</span>
+			</p>
+			<p>
+				<label for="phone">Mobile Number: </label>
+				<span>{{signupdata.u.phone}}</span>
 			</p>
 		</div>
-
-		<div ng-show="isAlternateText">
-			<h1>Please enter your current address</h1>
+		<div>
+			<p>License details</p>
 			<p>
-				<input type="text" name="alternateText" ng-model="c.alternateText" value="" />
+				<label for="address">Correct Address: </label>
+				<span>{{signupdata.license.correctAddress}}</span>
 			</p>
 			<p>
-				<button class="button" ng-click="closeModal()">Confirm</button>	
-			</p>	
-		</div>	
+				<label for="license_image">Image: </label>
+				<img ng-src="{{signupdata.license.image}}" height="100" width="100" />
+			</p>			
+		</div>
+		<div>
+			<p>Medicare details</p>
+			<p>
+				<label for="people">Additional People: </label>
+				<ul>
+					<li ng-repeat="people in signupdata.medicare.people">{{ people.name }}</li>
+				</ul>	
+			</p>
+			<p>
+				<label for="medicare_image">Image: </label>
+				<img ng-src="{{signupdata.medicare.image}}" height="100" width="100" />
+			</p>			
+		</div>
+		<div>
+			<p>Current Insurer details</p>
+			<p>
+				<label for="policy">Everyone On Policy: </label>
+				<span>{{signupdata.current.everyoneOnPolicy ? 'Yes' : 'No' }}	
+			</p>
+			<p>
+				<label for="insurance">Has Current Insurance: </label>
+				<span>{{signupdata.current.hasCurrentInsurance ? 'Yes' : 'No' }}	
+			</p>
+			<p>
+				<label for="insurer_image">Image: </label>
+				<img ng-src="{{signupdata.current.image}}" height="100" width="100" />
+			</p>			
+		</div>					
 	</div>
+	<footer class="small-12 columns">
+		<button class="button" type="submit">Confirm</button>
+		<span ng-show="formInvalid">Please check your inputs</span>
+	</footer>
 </div>
+
