--- a/app/views/join-start.html
+++ b/app/views/join-start.html
@@ -22,7 +22,7 @@
 		</p>
 	</div>
 	<footer class="small-12 columns">
-		<a class="button" ng-click="process(joinForm.$valid)">Next</a>
+		<a class="button" ng-click="processForm(joinForm.$valid)">Next</a>
 	</footer>
 </div>
 
