refactoring signup component — added factory to signup object — simplified controllers — fixed crazy validation of start form — used nested views for confirm and done steps to avoid duplicity of content

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -352,7 +352,7 @@ section.contact{
 
 // General page animations //
 
-[ui-view]{
+[ui-view]:not([class~="without-animation"]){
   &.ng-enter,
   &.ng-leave{
     transition: all .5s $easeOutExpo;
