--- a/app/views/join-summary.html
+++ b/app/views/join-summary.html
@@ -1,7 +1,6 @@
 <div class="row">
 	<div class="small-12 columns">
-		<h2>You're gonna love your Basic65 health cover</h2>
-		<p>Let's get some information off you first.</p>
+        <div ui-view="header" class="without-animation"></div>
 		<div>
 			<p>User details</p>
 			<p>
@@ -57,9 +56,6 @@
 			</p>			
 		</div>					
 	</div>
-	<footer class="small-12 columns">
-		<button class="button" type="submit">Confirm</button>
-		<span ng-show="formInvalid">Please check your inputs</span>
-	</footer>
+    <div ui-view="footer" class="without-animation"></div>
 </div>
 
